2006-11-09  Paul J Stevens <paul@nfg.nl>

	* serverchild.c:
	work on #437
	* db.c:
	only retrieve header for envelope reconstruction
	* dbmail-message.c:
	fix segfault
	* db.c:
	fix potential turnover
	* maintenance.c:
	reshuffle cache maintenance

2006-11-08  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	Revert result logic in sort_process.
	Corrected a for loop index typo (closes bug #441).

2006-11-07  Paul J Stevens <paul@nfg.nl>

	* db.c:
	make allocation fail louder in db_icheck_envelope
	* modules/sortsieve.c:
	invert result logic in sort_process
	* check_dbmail_util.c:
	make allocation fail louder in db_icheck_envelope

2006-11-06  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.h.in:
	Add LDAP_DEPRECATED because we haven't switch LDAP API's to the new
	ldap_bind_sasl and friends.
	* configure.in:
	Version bump to 2.2

2006-11-06  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/dbmail.postinst:
	pre-release updates
	* db.c:
	revert mysql optimization (closes #440)
	* debian/control, test-scripts/testimap.py:
	fix depends

2006-11-05  Aaron Stone  <aaron@serendipity.cx>

	* serverparent.h, serverparent.c, pop3.c, timsieve.c, lmtp.c:
	Moved validchars into serverparent.c as ValidNetworkChars, with a
	wider tolerance for allowed characters (closes bug #435).
	* misc.c:
	Removed an unused variable.

2006-11-05  Paul J Stevens <paul@nfg.nl>

	* imapcommands.c:
	fix sort/search/thread bug
	* debian/control:
	update dependencies

2006-11-04  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_util.c, db.c, modules/dbmysql.c:
	re-add the MR optimization

2006-11-03  Aaron Stone  <aaron@serendipity.cx>

	* sql/mysql/migrate_from_2.0_to_2.2.mysql,
	sql/mysql/2_1_7-2_2_0.mysql:
	Make the envelope table creations consistent.

2006-11-03  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c, modules/dbpgsql.c:
	fully revert the utf8 behaviour. sql_ascii is the only supported db
	encoding again for postgresql
	* dbmail-message.c: